--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
 	"require": {
 		"php": "^5.5 || ^7.0",
 		"composer/installers": "~1.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^6.0"
 	}
 }
