--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,4 @@
 {
 	"name": "mlaa/hc-member-profiles",
-	"type": "wordpress-plugin",
-	"require": {
-		"php": "^5.5 || ^7.0",
-		"composer/installers": "~1.0"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "5.6"
-	}
+	"type": "wordpress-plugin"
 }
