update test scaffolding

--- a/.distignore
+++ b/.distignore
@@ -8,19 +8,23 @@
 .DS_Store
 Thumbs.db
 behat.yml
+bitbucket-pipelines.yml
 bin
-circle.yml
+.circleci/config.yml
 composer.json
 composer.lock
 Gruntfile.js
 package.json
+package-lock.json
 phpunit.xml
 phpunit.xml.dist
 multisite.xml
 multisite.xml.dist
-phpcs.ruleset.xml
+phpcs.xml
+phpcs.xml.dist
 README.md
 wp-cli.local.yml
+yarn.lock
 tests
 vendor
 node_modules
