--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "hc-member-profiles",
   "version": "0.1.0",
   "main": "Gruntfile.js",
-  "author": "YOUR NAME HERE",
+  "author": "Ryan Williams <rwilliams@mla.org>",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-wp-i18n": "~0.5.0",
