--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,8 @@ before_script:
     else
       echo "xdebug.ini does not exist"
     fi
-  - |
-    bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-    composer global require "phpunit/phpunit=4.8.*|5.7.*"
+  - bash bin/install-wp-tests.sh
+  - composer global require "phpunit/phpunit=4.8.*|5.7.*"
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       composer global require wp-coding-standards/wpcs
