--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "Gruntfile.js",
   "author": "Ryan Williams <rwilliams@mla.org>",
   "devDependencies": {
+    "eslint": "^4.19.1",
     "grunt": "~0.4.5",
     "grunt-wp-i18n": "~0.5.0",
     "grunt-wp-readme-to-markdown": "~1.0.0"
